# email-triage-env

./: .gitignore  Dockerfile  README.md  SUBMISSION_GUIDE.md  demo_run.py  inference.py  openenv.yaml  out.txt  pyproject.toml  requirements.txt
server/: Dockerfile  app.py  email_triage_env.py  openenv.yaml  server.py
server/data/: emails.py
